<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/lbl_begin_date"
        android:layout_width="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:id="@+id/tvLblDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/etDate"
        android:layout_below="@+id/tvLblDate"
        android:paddingLeft="40dp"
        android:layout_toRightOf="@+id/tvLblDate"
        android:layout_centerInParent="true" />

    <TextView
        android:text="@string/lbl_sort_order"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDate"
        android:layout_toRightOf="@id/etDate"
        android:id="@+id/tvLblSortOrder"
        android:layout_centerInParent="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sort_spinner"
        android:layout_below="@+id/tvLblSortOrder"
        android:layout_centerInParent="true"/>


    <TextView
        android:text="@string/lbl_news_desk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sort_spinner"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/tvLblNewsDesk" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLblNewsDesk"
        android:id="@+id/linearNews"
        android:layout_centerInParent="true">

        <CheckBox android:id="@+id/chkbox_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_arts"
            />
        <CheckBox android:id="@+id/chkbox_fashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_fashion"
            />
        <CheckBox android:id="@+id/chkbox_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_Sports"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/btn_save"
        android:onClick="onSaveClick"
        android:layout_centerInParent="true"
        android:layout_below="@+id/linearNews"
        android:background="@color/colorPrimary"
        />

</RelativeLayout>