<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <CheckBox android:id="@+id/chkbox_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_arts"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/chkbox_fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_fashion"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/chkbox_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_Sports"
        android:onClick="onCheckboxClicked"/>
</LinearLayout>